Bugs fixed - missing the decimals method

--- a/P7 New/ZozorPlus/View/Base.lproj/Main.storyboard
+++ b/P7 New/ZozorPlus/View/Base.lproj/Main.storyboard
@@ -187,7 +187,7 @@
                                             <action selector="actionButtons:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xbK-tO-bxz"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1md-mv-IxN">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1md-mv-IxN">
                                         <rect key="frame" x="73" y="0.0" width="58.5" height="58"/>
                                         <color key="backgroundColor" red="0.87294975828729282" green="0.37112226881503746" blue="0.32504552810982973" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="42"/>
@@ -198,7 +198,7 @@
                                             <action selector="actionButtons:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZSk-ws-P1y"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QGP-Gd-K2f">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QGP-Gd-K2f">
                                         <rect key="frame" x="146.5" y="0.0" width="58" height="58"/>
                                         <color key="backgroundColor" red="0.24516823116012665" green="0.57564382740644215" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="42"/>
@@ -209,7 +209,7 @@
                                             <action selector="actionButtons:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vK7-0g-tu9"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Egl-7o-rUT">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Egl-7o-rUT">
                                         <rect key="frame" x="219.5" y="0.0" width="58.5" height="58"/>
                                         <color key="backgroundColor" red="0.911789736053633" green="0.67209421023012283" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="42"/>
